# dioxus-static-hydration

./: .gitignore  .prettierignore  .prettierrc.toml  Cargo.toml  Dioxus.toml  LICENSE.txt  README.md  index.html  package-lock.json  package.json  rustfmt.toml
assets/: stylesheet.css
assets/template/: stylesheet.css
merge/merged/: index.html
src/: lib.rs  main.rs  route.rs
src/component/: mod.rs
src/component/footer/: mod.rs
src/component/home/: mod.rs
src/component/nav/: mod.rs
src/component/template/: mod.rs
src/components/: about.rs  colophon.rs  footer.rs  home.rs  nav.rs
src/components/about/: mod.rs
src/components/colophon/: mod.rs
src/components/footer/: mod.rs
static/: index.html
static/about/: index.html
static/colophon/: index.html
