[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "CroftSoft Dioxus Static Hydration"
edition = "2021"
keywords = ["dioxus"]
license = "MIT"
name = "dioxus-static-hydration"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-static-hydration"
version = "0.6.0-SNAPSHOT"

[dependencies]
dioxus = { version = "0.6.2", features = ["fullstack", "router"] }
# dioxus-isrg = "0.6.2"
dioxus-logger = "0.6.2"
serde = "1.0.217"
tracing = "0.1.41"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
