[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "CroftSoft Dioxus Static Hydration"
edition = "2024"
keywords = ["dioxus"]
license = "MIT"
name = "dioxus-static-hydration"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-static-hydration"
rust-version = "1.85.0"
version = "0.6.3-SNAPSHOT"

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
serde = "1.0.219"
tracing = "0.1.41"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
