[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "CroftSoft Dioxus Static Hydration"
edition = "2024"
keywords = ["dioxus"]
license = "MIT"
name = "dioxus-static-hydration"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-static-hydration"
rust-version = "1.92.0"
version = "0.7.0-SNAPSHOT"

[dependencies]
dioxus = { version = "0.7.3", features = ["fullstack", "router"] }
tracing = "0.1.44"

[features]
default = ["web"]
server = ["dioxus/server"]
web = ["dioxus/web"]
